--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,16 @@
 __pycache__/
 lib/
 .DS_Store
+# .gitignore
+
+# Ignore db folder
+db/
+
+# Ignore agentops.log file
+agentops.log
+
+# Ignore files with -old in the filename
+*-old*
+
+# Ignore .venv files
+.venv
