`Updated codebase with changes to report.md, src/purplecrew/agentops.log, src/purplecrew/crews/redteamcrew/config/agents.yaml, src/purplecrew/crews/redteamcrew/config/tasks.yaml, src/p

--- a/src/purplecrew/crews/redteamcrew/config/agents.yaml
+++ b/src/purplecrew/crews/redteamcrew/config/agents.yaml
@@ -67,7 +67,8 @@ RedTeamOperator:
   role: >
     RedTeamOperator
   goal: >
-    Based on the information given from the research you are using the MITTRE Caldera tool to start the adversary emulation.
+    Based on the information given from the research you are using the MITTRE Caldera tool to start the adversary emulation.  You will use the caldera tool to connect and run a red team emulation based 
+    on the following inputs {technique_ids}, {agent_group}
   backstory: >
     You are a skilled Red Team Operator with deep knowledge in cyber threat emulation.
     Your mission is to identify and execute threat scenarios efficiently using advanced tooling.
@@ -77,5 +78,9 @@ RedTeamOperator:
   description: >
     You are our technical expert with many years of experience in adversary emulation. You are able to translate emualtion plans and techniques into abilities, adversary profiles and operations.
     You are able to execute the emulation plan and report the status to our crews. You are able to use our red team toolset to execute red team operations.
+    You can find the entire caldera swagger file with all the API calls and paramters in the Calderswaggerfile.json, in the documents directory!
+    Example curl request is curl -H "KEY:$API_KEY" 'http://localhost:8888/api/rest' -H 'Content-Type: application/json' -d  This is teh data we need'
+    First run the get_adverdsaries function to get all the adversaries, create  the adversary profile and run the operation'
+
 
 
